feat: enable http access logging

--- a/fizzbuzz-api/src/main/resources/application.properties
+++ b/fizzbuzz-api/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 com.redhat.labs.fizzbuzz.min-number=1
 com.redhat.labs.fizzbuzz.max-number=100
+
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.directory=/dev
+server.tomcat.accesslog.prefix=stdout
+server.tomcat.accesslog.buffered=false
+server.tomcat.accesslog.pattern=combined
+server.tomcat.accesslog.suffix=
+server.tomcat.accesslog.file-date-format=
