feat: enable actuator

--- a/fizzbuzz-api/src/main/resources/application.properties
+++ b/fizzbuzz-api/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 com.redhat.labs.fizzbuzz.min-number=1
 com.redhat.labs.fizzbuzz.max-number=100
 
+management.endpoint.health.probes.enabled=true
+
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.directory=/dev
 server.tomcat.accesslog.prefix=stdout
@@ -8,3 +10,4 @@ server.tomcat.accesslog.buffered=false
 server.tomcat.accesslog.pattern=combined
 server.tomcat.accesslog.suffix=
 server.tomcat.accesslog.file-date-format=
+server.tomcat.accesslog.request-attributes-enabled=true
