--- a/fizzbuzz-ui/package.json
+++ b/fizzbuzz-ui/package.json
@@ -7,6 +7,7 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest",
+    "test:unit:ci": "vitest run --reporter basic --reporter junit --outputFile TEST-fizzbuzz-ui.xml",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
