--- a/fizzbuzz-ui/package.json
+++ b/fizzbuzz-ui/package.json
@@ -7,7 +7,7 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "test:unit:ci": "vitest run --reporter basic --reporter junit --outputFile TEST-fizzbuzz-ui.xml",
+    "test:unit:ci": "vitest run --reporter basic --reporter junit --outputFile TEST-fizzbuzz-ui.xml --coverage",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
@@ -25,6 +25,7 @@
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.16.8",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitest/coverage-c8": "^0.33.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
